tests/sources/invalid/strings/string_unknown_method.fire
// Semantic error: unknown method on type 'string'.

void string_unknown_method() {
    string s = "hello";
    s.reverse();  //~ ERROR FS-SEM-0010 @7
}
